A very basic text geometry.
- Positioning x, y based on scaled data values.
- Very simple text format for interpolating data values into the text displayed. See examples.
- SVG implementation somewhat questionable: currently they hover over everything but are transparent, but that will mess up hover events for other things down the line.

--- a/gg.css
+++ b/gg.css
@@ -51,3 +51,20 @@ div#examples span { margin: 3px; }
     font-size: 10px;
     font-weight: 300;
 }
+
+.graphicText {
+  font-size: 10px;
+  cursor: pointer;
+  fill: black;
+  text-shadow: 1px 1px 0px white;
+}
+
+.graphicText.showOnHover {
+  fill: transparent;
+  text-shadow: none;
+}
+
+.graphicText.showOnHover:hover {
+  fill: black;
+  text-shadow: 1px 1px 0px white;
+}
